<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".BandanaInfo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/first_album"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/favorite_icon"
            android:contentDescription="@android:string/cut" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="46dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/authors"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="VisualLintBounds" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/rectangle_71" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/type_of"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/genre_of"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/year_of"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/statistic"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180pt">

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bottom__5_" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginTop="20px"
                android:layout_weight="1"
                android:backgroundTint="#292B31"
                android:minHeight="48dp"
                app:srcCompat="@drawable/find_icon"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/HomeIcon"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginTop="20px"
                android:layout_weight="1"
                android:backgroundTint="#292B31"
                android:minHeight="48dp"
                app:srcCompat="@drawable/main_icon"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginTop="20px"
                android:layout_weight="1"
                android:backgroundTint="#292B31"
                android:minHeight="48dp"
                app:srcCompat="@drawable/account_icon"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>