<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".ArtistInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/tape"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/favorite_icon"
            android:contentDescription="@android:string/cut" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/photo" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="46dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/tape_info"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/latest"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/rectangle_71" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/rectangle_72" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/first_album"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/second_album"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            app:srcCompat="@drawable/bottom__5_" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginTop="105dp"
                android:layout_weight="1"
                android:backgroundTint="#292B31"
                android:minHeight="48dp"
                app:srcCompat="@drawable/find_icon"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/HomeIconPage"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="105dp"
                android:layout_weight="1"
                android:backgroundTint="#292B31"
                android:minHeight="48dp"
                app:srcCompat="@drawable/main_page"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginTop="105dp"
                android:layout_weight="1"
                android:backgroundTint="#292B31"
                android:minHeight="48dp"
                app:srcCompat="@drawable/account_icon"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>

